# Mapper

./: CMakeLists.txt  LinksGenerator.cpp  LinksGenerator.hpp  Mapper.cpp  Mapper.hpp  main.cpp
tests/: CMakeLists.txt  ut_create_graph.cpp  ut_mapper.cpp
utils/: CMakeLists.txt  Log.cpp
